# museum

./: .gitignore  CMakeLists.txt  README.md  museum
include/: context.h  core.h  model.h  render.h  setup.h  shader_program.h  structs.h
include/GL/: gl3w.h
shaders/particles/: fragment.glsl  vertex.glsl
shaders/phong/: fragment.glsl  vertex.glsl
shaders/screen/: fragment.glsl
src/: context.cpp  core.cpp  main.cpp  render.cpp  setup.cpp
